--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
-    "react-type-animation": "^3.2.0",
-    "react-vertical-timeline-component": "^3.5.3"
+    "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
